Alterando var para let

--- a/Cap1/ex1_2.html
+++ b/Cap1/ex1_2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script>
-        var nome = prompt("Qual o seu nome?");
+        let nome = prompt("Qual o seu nome?");
         alert("Olá " + nome);
     </script>
 </body>
