--- a/Cap1/ex1_5.html
+++ b/Cap1/ex1_5.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <script>
-        var fruta = "Banana";
-        var preco = 3.50;
-        var levar = true;
-        var novoValor;
-        alert(fruta + " " + preco + " " + levar + " " + novoValor);
+        let fruta = "Banana";
+        let preco = 3.50;
+        let levar = true;
+        let novoValor;
+        alert(fruta + " " + preco + " " + lelet + " " + novoValor);
     </script>
 </body>
 </html>
