--- a/Cap1/ex1_7.html
+++ b/Cap1/ex1_7.html
@@ -11,10 +11,10 @@
       // CONVERSÃO DA ENTRADA PARA NÚMERO
 
       // lê um dado de entrada 
-      var num = Number(prompt("Número: "));
+      let num = Number(prompt("Número: "));
 
       // calcula o dobro
-      var  dobro = num + num;
+      let  dobro = num + num;
 
       // exibe a resposta 
       alert("Dobro é: " + dobro);
