--- a/Cap1/ex1_9.html
+++ b/Cap1/ex1_9.html
@@ -11,11 +11,11 @@
       //CÁLCULO DO VALOR DO JANTAR
 
       // lê o valor do jantar 
-      var jantar = Number(prompt("Valor do jantar R$: "));
+      let jantar = Number(prompt("Valor do jantar R$: "));
 
       // calcula os dados
-      var garcom = jantar * 0.10;
-      var total = jantar + garcom;
+      let garcom = jantar * 0.10;
+      let total = jantar + garcom;
 
       // apresenta as respostas 
       alert("Taxa Garçom R$: " + garcom.toFixed(2) + "\nTotal R$: " + total.toFixed(2));
