--- a/Cap1/exer1_1.html
+++ b/Cap1/exer1_1.html
@@ -10,7 +10,7 @@
     <script>
     //    DIGITAR UM NÚMERO E INFORMAR SEUS VIZINHOS(anterior e posterior)
 
-    var num = Number(prompt("Informe um Número"))
+    let num = Number(prompt("Informe um Número"))
 
     anterior = --num;
     posterior = num + 2;
