--- a/Cap1/exer1_2.html
+++ b/Cap1/exer1_2.html
@@ -10,10 +10,10 @@
     <script>
       // DIVISÃO DA CONTA POR CLIENTE 
 
-      var conta = Number(prompt("Digite o valor total da conta R$: " ))
-      var clientes = Number(prompt("Digite a quantidade de clientes: "))
+      let conta = Number(prompt("Digite o valor total da conta R$: " ))
+      let clientes = Number(prompt("Digite a quantidade de clientes: "))
 
-      var valorPorCliente = conta / clientes;
+      let valorPorCliente = conta / clientes;
       
       alert("O Valor pago por cada cliente é R$: " + valorPorCliente.toFixed(2));
     </script>
