--- a/Cap1/exer1_4.html
+++ b/Cap1/exer1_4.html
@@ -9,10 +9,10 @@
 <body>
     <script>
       // MÉDIA DE NOTAS 
-      var nota1 = Number(prompt("Digite a 1ª Nota: "));
-      var nota2 = Number(prompt("Digite a 2ª Nota: "));
+      let nota1 = Number(prompt("Digite a 1ª Nota: "));
+      let nota2 = Number(prompt("Digite a 2ª Nota: "));
 
-      var media = (nota1 + nota2) / 2;
+      let media = (nota1 + nota2) / 2;
 
       alert("O valor da sua média é: " + media);
     </script>
