--- a/Cap1/ex1_10.html
+++ b/Cap1/ex1_10.html
@@ -11,11 +11,11 @@
       //  CÁLCULO DA DURAÇÃO DE HORAS DE UMA VIAGEM
 
         // lê os dados de entrada 
-        var dias = Number(prompt("Nº Dias: "));
-        var horas = Number(prompt("Nº Horas: "));
+        let dias = Number(prompt("Nº Dias: "));
+        let horas = Number(prompt("Nº Horas: "));
 
         // calcula a duração
-        var total = (dias * 24) + horas;
+        let total = (dias * 24) + horas;
 
         // exibe o total 
         alert("Total : " + total + " horas");
