--- a/Cap1/ex1_3.html
+++ b/Cap1/ex1_3.html
@@ -9,11 +9,11 @@
 <body>
     <script>
         // Operações envolvendo strings e números
-        var a = "20";
-        var b = a * 2;
-        var c = a / 2;
-        var d = a - 2;
-        var e = a + 2;
+        let a = "20";
+        let b = a * 2;
+        let c = a / 2;
+        let d = a - 2;
+        let e = a + 2;
         alert("e: " + e); // mostra concatenado
     </script>
 </body>
