--- a/Cap1/ex1_6.html
+++ b/Cap1/ex1_6.html
@@ -11,10 +11,10 @@
       // CÁLCULO DO DOBRO DE UM NÚMERO
 
       // lê um dado de entrada 
-      var num = prompt("Número: ");
+      let num = prompt("Número: ");
 
       // calcula o dobro
-      var dobro = num * 2;
+      let dobro = num * 2;
       
       // exibe a resposta
       alert("Dobro é : " + dobro);
