--- a/Cap1/ex1_8.html
+++ b/Cap1/ex1_8.html
@@ -11,11 +11,11 @@
       // Soma de dois números 
 
       // lê os números 
-      var num1 = Number(prompt("1º Número: "));
-      var num2 = Number(prompt("2º Número: "));
+      let num1 = Number(prompt("1º Número: "));
+      let num2 = Number(prompt("2º Número: "));
 
       // calcula a soma
-      var soma = num1 + num2;
+      let soma = num1 + num2;
 
       //exibe o resultado
       alert("Soma é: " + soma);
