programa peso ideal

--- a/Cap2/ex2_2.html
+++ b/Cap2/ex2_2.html
@@ -27,7 +27,7 @@
     </p>
     <p id="outTitulo"></p>
     <p id="outResposta"></p>
-    <script src="/Cap2/ex2_2.js"></script>
+    <script src="/Cap2/js/ex2_2.js"></script>
 </body>
 
 </html>
