--- a/Cap2/ex2_4.html
+++ b/Cap2/ex2_4.html
@@ -26,7 +26,7 @@ de um cliente, exibir valor a ser pago  -->
        <input type="button" value="Calcular Preço" id="btCalcular"> 
     </p>
     <h3 id="outValor"></h3>
-    <script src="/Cap2/ex2_4.js"></script>
+    <script src="/Cap2/js/ex2_4.js"></script>
 
 </body>
 
