--- a/Cap2/exe2_2.html
+++ b/Cap2/exe2_2.html
@@ -19,6 +19,6 @@
     </p>
     <p><input type="button" value="Calcular Valor a  Pagar" id="btCalcular"></p>
     <h3 id="outPagar"></h3>
-    <script src="/Cap2/exe2_2.js"></script>
+    <script src="/Cap2/js/exe2_2.js"></script>
 </body>
 </html>
