--- a/Cap2/exe2_3.html
+++ b/Cap2/exe2_3.html
@@ -20,6 +20,6 @@
     <p><input type="button" value="Ver Promoção" id="btPromocao"></p>
     <h3 id="outPromocao"></h3>
     <h3 id="outPrecoTerc"></h3>
-    <script src="/Cap2/exe2_3.js"></script>
+    <script src="/Cap2/js/exe2_3.js"></script>
 </body>
 </html>
