--- a/Cap2/ex2_3.html
+++ b/Cap2/ex2_3.html
@@ -25,7 +25,7 @@
     <h3 id="outVeiculo"></h3>
     <h3 id="outEntrada"></h3>
     <h3 id="outParcela"></h3>
-    <script src="/Cap2/ex2_3.js"></script>
+    <script src="/Cap2/js/ex2_3.js"></script>
 </body>
 
 </html>
