--- a/Cap2/exe2_1.html
+++ b/Cap2/exe2_1.html
@@ -22,7 +22,7 @@
     </p>
     <h3 id="outDescricao"></h3>
     <h3 id="outPreco"></h3>
-    <script src="/Cap2/exe2_5.js"></script>
+    <script src="/Cap2/js/exe2_5.js"></script>
 
 </body>
 </html>
